--- a/html/beagle.html
+++ b/html/beagle.html
@@ -22,6 +22,7 @@
     <script src='../js/hterm_vt.js'></script>
     <script src='../js/hterm_vt_character_map.js'></script>
 
+    <script src='../js/serial.js'></script>
     <script src='../js/beagle.js'></script>
 
     <style>
