--- a/beagle-term/html/beagle.html
+++ b/beagle-term/html/beagle.html
@@ -22,30 +22,52 @@
     <script src='../js/hterm_vt.js'></script>
     <script src='../js/hterm_vt_character_map.js'></script>
 
+    <script src='../js/jquery-1.8.2.min.js'></script>    
+    <script src='../js/jquery.leanModal.min.js'></script>
+
+    <script src='../js/connect_dialog.js'></script>
     <script src='../js/serial.js'></script>
     <script src='../js/beagle.js'></script>
 
-    <style>
-      body {
-        position: absolute;
-        padding: 0;
-        margin: 0;
-        height: 100%;
-        width: 100%;
-        overflow: hidden;
-      }
+    <link rel='stylesheet' href='../css/beagle.css'></link>
+    <link rel='stylesheet' href='../css/common.css'></link>
 
-      #terminal {
-        display: block;
-        position: relative;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
     <title>Beagle Term</title>
   </head>
 
   <body>
     <div id='terminal'></div>
+    
+    <div id='connect-dialog' class='no-display'>
+      <div class='dialog-title'>CONFIGURATION</div><hr>
+      <div>
+        <label>
+          <span class='picker-label'>PORT</span>
+          <select id='port-picker'></select>
+        </label>
+      </div>
+      <div>
+        <label>
+          <span class='picker-label'>BITRATE</span>
+          <select id='bitrate-picker'>
+            <option value="110">110</option>
+            <option value="300">300</option>
+            <option value="1200">1200</option>
+            <option value="2400">2400</option>
+            <option value="4800">4800</option>
+            <option value="9600">9600</option>
+            <option value="14400">14400</option>
+            <option value="19200">19200</option>
+            <option value="38400">38400</option>
+            <option value="57600">58600</option>
+            <option value="115200">115200</option>
+          </select>
+        </label>
+      </div>
+      <br>
+      <button id='connect' class='right' type='submit'>CONNECT</button>
+    </div>
+    <a id='connect-dialog-trigger' class='no-display' href='#connect-dialog' rel='leanModal'></a>
+
   </body>
 </html>
