Replace jquery.leanModal.min.js with jquery.leanModal.js for tweak.

--- a/beagle-term/html/beagle.html
+++ b/beagle-term/html/beagle.html
@@ -23,7 +23,7 @@
     <script src='../js/hterm_vt_character_map.js'></script>
 
     <script src='../js/jquery-1.8.2.min.js'></script>    
-    <script src='../js/jquery.leanModal.min.js'></script>
+    <script src='../js/jquery.leanModal.js'></script>
 
     <script src='../js/connect_dialog.js'></script>
     <script src='../js/serial.js'></script>
