--- a/beagle-term/html/beagle.html
+++ b/beagle-term/html/beagle.html
@@ -26,6 +26,7 @@
     <script src='../js/jquery.leanModal.js'></script>
 
     <script src='../js/connect_dialog.js'></script>
+    <script src='../js/message_dialog.js'></script>
     <script src='../js/serial.js'></script>
     <script src='../js/beagle.js'></script>
 
@@ -38,7 +39,8 @@
   <body>
     <div id='terminal'></div>
     
-    <div id='connect-dialog' class='no-display'>
+    <!-- Setup dialog -->
+    <div id='connect-dialog' class='no-display dialog'>
       <div class='dialog-title'>CONFIGURATION</div><hr>
       <div>
         <label>
@@ -68,6 +70,15 @@
       <button id='connect' class='right' type='submit'>CONNECT</button>
     </div>
     <a id='connect-dialog-trigger' class='no-display' href='#connect-dialog' rel='leanModal'></a>
+
+    <!-- Message dialog -->
+    <div id='message-dialog' class='no-display dialog'>
+      <div class='dialog-title'>INFORMATION</div><hr>
+      <p id='message-content'></p>
+      <br>
+      <button id='message-ok' class='right' type='submit'>OK</button>
+    </div>
+    <a id='message-dialog-trigger' class='no-display' href='#message-dialog' rel='leanModal'></a>
 
   </body>
 </html>
