Update hterm library
the library comes from
http://git.chromium.org/chromiumos/platform/assets.git
& commit # is e752806a756f3ec8bc38c2d0ddf81ca07623bfc0

for running on Packaged app.
I disabled localStorage. (localStorage is not supported on Chorme
packaged app)

TEST=install, run , check on serial device, exit

--- a/beagle-term/html/beagle.html
+++ b/beagle-term/html/beagle.html
@@ -21,6 +21,15 @@
     <script src='../js/hterm_text_attributes.js'></script>
     <script src='../js/hterm_vt.js'></script>
     <script src='../js/hterm_vt_character_map.js'></script>
+	
+	<!-- for using later -->
+	<!-- currently these only prevent dependency error -->
+	<script src='../js/lib_storage.js'></script>
+	<script src='../js/lib_storage_chrome.js'></script>
+    <!--<script src='../js/lib_storage_local.js'></script>-->
+    <script src='../js/lib_utf8.js'></script>
+	
+	<script src='../js/hterm_preference_manager.js'></script>
 
     <script src='../js/jquery-1.8.2.min.js'></script>    
     <script src='../js/jquery.leanModal.js'></script>
