--- a/beagle-term/beagle.html
+++ b/beagle-term/beagle.html
@@ -1,36 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src='js/lib.js'></script>
-    <script src='js/lib_colors.js'></script>
-    <script src='js/lib_f.js'></script>
-    <script src='js/lib_fs.js'></script>
-    <script src='js/lib_preference_manager.js'></script>
-    <script src='js/lib_utf8.js'></script>
-
-    <script src='js/hterm.js'></script>
-    <script src='js/hterm_frame.js'></script>
-    <script src='js/hterm_keyboard.js'></script>
-    <script src='js/hterm_keyboard_keymap.js'></script>
-    <script src='js/hterm_options.js'></script>
-    <script src='js/hterm_pubsub.js'></script>
-    <script src='js/hterm_screen.js'></script>
-    <script src='js/hterm_scrollport.js'></script>
-    <script src='js/hterm_terminal.js'></script>
-    <script src='js/hterm_terminal_io.js'></script>
-    <script src='js/hterm_text_attributes.js'></script>
-    <script src='js/hterm_vt.js'></script>
-    <script src='js/hterm_vt_character_map.js'></script>
-
-    <!-- for using later -->
-    <!-- currently these only prevent dependency error -->
-    <script src='js/lib_storage.js'></script>
-    <script src='js/lib_storage_chrome.js'></script>
-    <!--<script src='js/lib_storage_local.js'></script>-->
-    <script src='js/lib_utf8.js'></script>
-
-    <script src='js/hterm_preference_manager.js'></script>
-
+    <title>Beagle Term</title>
+    <script src="hterm_all.js"></script>
     <script src='js/jquery-1.8.2.min.js'></script>
     <script src='js/jquery.leanModal.js'></script>
 
@@ -38,14 +10,41 @@
     <script src='js/message_dialog.js'></script>
     <script src='js/beagle.js'></script>
 
-    <link rel='stylesheet' href='css/beagle.css'></link>
-    <link rel='stylesheet' href='css/common.css'></link>
+    <link rel='stylesheet' href='css/beagle.css'>
+    <link rel='stylesheet' href='css/common.css'>
+    <style>
+      body {
+        position: absolute;
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+      }
 
-    <title>Beagle Term</title>
+      #update-notification {
+        position: absolute;
+        top: 5px;
+        right: 20px;
+        font-size: 20px;
+        background-color: orange;
+        color: white;
+        opacity: 0.9;
+        cursor: pointer;
+      }
+
+      #terminal {
+        display: block;
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
 
   <body>
     <div id='terminal'></div>
+    <div id='update-notification' style='display:none'>&#x21E7;</div>
     
     <!-- Setup dialog -->
     <div id='connect-dialog' class='no-display dialog'>
