--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NinjaTerm</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>BeagleTerm</title>
   <script src="hterm_all.js"></script>
   <script src="bower_components/platform/platform.js"></script>
   <script src="main.js"></script>
@@ -11,32 +10,32 @@
   <link rel="import" href="bower_components/paper-dialog/paper-dialog-transition.html">
 
   <style>
-      body {
-        position: absolute;
-        padding: 0;
-        margin: 0;
-        height: 100%;
-        width: 100%;
-        overflow: hidden;
-      }
+    body {
+      position: absolute;
+      padding: 0;
+      margin: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+    }
 
-      #update-notification {
-        position: absolute;
-        top: 5px;
-        right: 20px;
-        font-size: 20px;
-        background-color: orange;
-        color: white;
-        opacity: 0.9;
-        cursor: pointer;
-      }
+    #update-notification {
+      position: absolute;
+      top: 5px;
+      right: 20px;
+      font-size: 20px;
+      background-color: orange;
+      color: white;
+      opacity: 0.9;
+      cursor: pointer;
+    }
 
-      #terminal {
-        display: block;
-        position: relative;
-        width: 100%;
-        height: 100%;
-      }
+    #terminal {
+      display: block;
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
     </style>
 </head>
 
@@ -45,29 +44,29 @@
   <div id='update-notification' style='display:none'>&#x21E7;</div>$
 
   <paper-dialog id="connect_dialog" heading="Connection" style='width:400px' opened>
-  <div>
+    <div>
+      <label>
+        <span class='picker-label'>PORT</span>
+        <select id='port-picker'></select>
+      </label>
+    </div>
     <label>
-      <span class='picker-label'>PORT</span>
-      <select id='port-picker'></select>
+      <span class='picker-label'>BITRATE</span>
+      <select id='bitrate-picker'>
+        <option value="110">110</option>
+        <option value="300">300</option>
+        <option value="1200">1200</option>
+        <option value="2400">2400</option>
+        <option value="4800">4800</option>
+        <option value="9600">9600</option>
+        <option value="14400">14400</option>
+        <option value="19200">19200</option>
+        <option value="38400">38400</option>
+        <option value="57600">57600</option>
+        <option value="115200">115200</option>
+      </select>
     </label>
-  </div>
-  <label>
-    <span class='picker-label'>BITRATE</span>
-    <select id='bitrate-picker'>
-      <option value="110">110</option>
-      <option value="300">300</option>
-      <option value="1200">1200</option>
-      <option value="2400">2400</option>
-      <option value="4800">4800</option>
-      <option value="9600">9600</option>
-      <option value="14400">14400</option>
-      <option value="19200">19200</option>
-      <option value="38400">38400</option>
-      <option value="57600">57600</option>
-      <option value="115200">115200</option>
-    </select>
-  </label>
-  <paper-button label="Accept" affirmative autofocus>Accept</paper-button>
+    <paper-button label="Accept" affirmative autofocus>Accept</paper-button>
   </paper-dialog>
 </body>
 </html>
