--- a/app/index.html
+++ b/app/index.html
@@ -1,72 +1,62 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>BeagleTerm</title>
-  <script src="hterm_all.js"></script>
-  <script src="bower_components/platform/platform.js"></script>
-  <script src="main.js"></script>
-  <link rel="import" href="bower_components/paper-button/paper-button.html">
-  <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
-  <link rel="import" href="bower_components/paper-dialog/paper-dialog-transition.html">
-
-  <style>
-    body {
-      position: absolute;
-      padding: 0;
-      margin: 0;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-    }
-
-    #update-notification {
-      position: absolute;
-      top: 5px;
-      right: 20px;
-      font-size: 20px;
-      background-color: orange;
-      color: white;
-      opacity: 0.9;
-      cursor: pointer;
-    }
-
-    #terminal {
-      display: block;
-      position: relative;
-      width: 100%;
-      height: 100%;
-    }
-    </style>
-</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>BeagleTerm</title>
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+  </head>
 
 <body>
-  <div id="terminal"></div>$
-  <div id='update-notification' style='display:none'>&#x21E7;</div>$
+    <div id="terminal"></div>
 
-  <paper-dialog id="connect_dialog" heading="Connection" style='width:400px' opened>
-    <div>
-      <label>
-        <span class='picker-label'>PORT</span>
-        <select id='port-picker'></select>
-      </label>
-    </div>
-    <label>
-      <span class='picker-label'>BITRATE</span>
-      <select id='bitrate-picker'>
-        <option value="110">110</option>
-        <option value="300">300</option>
-        <option value="1200">1200</option>
-        <option value="2400">2400</option>
-        <option value="4800">4800</option>
-        <option value="9600">9600</option>
-        <option value="14400">14400</option>
-        <option value="19200">19200</option>
-        <option value="38400">38400</option>
-        <option value="57600">57600</option>
-        <option value="115200">115200</option>
-      </select>
-    </label>
-    <paper-button label="Accept" affirmative autofocus>Accept</paper-button>
-  </paper-dialog>
+    <!-- Settings Dialog -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="settingsModal" data-backdrop="static" data-keyboard="false">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Beagle Term: New Connection</h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label id="portLabel" class="control-label col-sm-2">PORT</label>
+                            <div class="col-sm-10">
+                                <select id="portDropdown" class="form-control"></select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label id="bitrateLabel" class="control-label col-sm-2">BITRATE</label>
+                            <div class="col-sm-10">
+                                <select id="bitrateDropdown" class="form-control">
+                                    <option value="110">110</option>
+                                    <option value="300">300</option>
+                                    <option value="1200">1200</option>
+                                    <option value="2400">2400</option>
+                                    <option value="4800">4800</option>
+                                    <option value="9600">9600</option>
+                                    <option value="14400">14400</option>
+                                    <option value="19200">19200</option>
+                                    <option value="38400">38400</option>
+                                    <option value="57600">57600</option>
+                                    <option value="115200">115200</option>
+                                </select>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="connectBtn" class="btn btn-primary" data-dismiss="modal">Connect</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/hterm_all.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
