Moved hterm import before index.js

--- a/app/index.html
+++ b/app/index.html
@@ -54,10 +54,12 @@
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
-    <!-- NOTE: Jquery import should come first. Since bootstrap uses jquery -->
+    <!-- NOTE: jQuery import should come first. Since Bootstrap uses jQuery -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
+
+    <!-- NOTE: hterm import should come first. Since index.js uses hterm -->
     <script src="js/lib/hterm_all.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
