--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
 
     <!-- NOTE: hterm import should come first. Since index.js uses hterm -->
     <script src="js/lib/hterm_all.js"></script>
+    <script src="js/assert.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
