--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- NOTE: hterm import should come first. Since index.js uses hterm -->
-    <script src="js/lib/hterm_all.js"></script>
+    <script src="js/lib/hterm_all.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
