--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,12 @@
                                     <option value="38400">38400</option>
                                     <option value="57600">57600</option>
                                     <option value="115200">115200</option>
+                                    <option value="128000">128000</option>
+                                    <option value="153600">153600</option>
+                                    <option value="230400">230400</option>
+                                    <option value="256000">256000</option>
+                                    <option value="460800">460800</option>
+                                    <option value="921600">921600</option>
                                 </select>
                             </div>
                         </div>
