Add jumbotron to show note

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,17 @@
 <body>
     <div id="terminal"></div>
 
+    <!-- Note Dialog -->
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Note</h1>
+            <p>BeagleTerm doesn't work on your ChromeOS version</p>
+            <p><a class="btn btn-primary btn-lg"
+                  href="https://github.com/beagleterm/beagle-term/issues/78"
+                  role="button">Learn more</a></p>
+        </div>
+    </div>
+
     <!-- Settings Dialog -->
     <div class="modal fade" role="dialog" id="settingsModal" data-backdrop="static" data-keyboard="false">
         <div class="modal-dialog" role="document">
