update warning message

--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@
                     <button type="button" id="connectBtn" class="btn btn-primary" data-dismiss="modal">Connect</button>
                 </div>
                 <div id="warning-alert" class="alert alert-danger">
-                    <strong>Warning!</strong> BeagleTerm cannot connect to device on this version.
+                    <strong>Warning!</strong> BeagleTerm cannot connect to device on this ChromeOS version.
                     See <a href="#"><span id="warning-detail">Details</span></a>
                 </div>
             </div><!-- /.modal-content -->
